Fix table on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -116,6 +116,9 @@ code {
 table {
     border-collapse: collapse;
     width: 100%;
+    max-width: 100%;
+    overflow-x: auto;
+    display: block;
 }
 
 th, td {
